# server/src/modules/common/resources/repositories/cg-soft.repository.ts
@@ -2,6 +2,7 @@ import { Injectable } from '@nestjs/common';
 import { InjectRepository } from '@nestjs/typeorm';
 import { Repository } from 'typeorm';
 import { CgSoftEntity } from '@/database/entities/resources/cg-soft.entity';
+import { CgSoftRequest } from '@/modules/common/resources/dto/cg-soft.request';
 
 @Injectable()
 export class CgSoftRepository extends Repository<CgSoftEntity> {
@@ -19,5 +20,15 @@ export class CgSoftRepository extends Repository<CgSoftEntity> {
     entity.description = description;
 
     return this.save(entity);
+  }
+
+  public async createManyCGSoft(data: CgSoftRequest[]): Promise<CgSoftEntity[]> {
+    const entities: CgSoftEntity[] = data.map(({ name }) => {
+      const entity = new CgSoftEntity();
+      entity.name = name;
+      return entity;
+    });
+
+    return this.save(entities, { chunk: 20 });
   }
 }
